--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0666.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0666.html
@@ -17,14 +17,12 @@
         </span>
         <span title="bbox 588 91 813 126" class="ocr_word" id="w_1">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">STKPHAaI</ins>
-            <del title="nlp 0.90">STKPHAaI</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span title="bbox 845 90 884 123" class="ocr_word" id="w_2">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">in</ins>
-            <del title="nlp 0.90">in</del>
+            <ins title="nlp 2.00">IN</ins>
           </span>
         </span>
         <span title="bbox 917 90 951 122" class="ocr_word" id="w_3">
@@ -35,8 +33,7 @@
         </span>
         <span title="bbox 981 90 1035 122" class="ocr_word" id="w_4">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">bE</ins>
-            <del title="nlp 0.90">bE</del>
+            <ins title="nlp 2.00">DE</ins>
           </span>
         </span>
         <span title="bbox 1063 87 1498 122" class="ocr_word" id="w_5">
@@ -201,16 +198,11 @@
         </span>
         <span lang="grc" title="bbox 1976 272 2064 323" class="ocr_word" id="w_36">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἀγα-</ins>
+            <ins title="nlp 2.00">ἀγαθὸν</ins>
           </span>
         </span>
       </span>
       <span title="bbox 393 340 2062 397" class="ocr_line">
-        <span lang="grc" title="bbox 393 346 459 383" class="ocr_word" id="w_37">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">θὸν</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 491 359 560 384" class="ocr_word" id="w_38">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">οὐκ</ins>
@@ -851,16 +843,11 @@
         </span>
         <span lang="grc" title="bbox 1982 953 2062 1008" class="ocr_word" id="w_162">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">φαί-</ins>
+            <ins title="nlp 2.00">φαίνεσθαι</ins>
           </span>
         </span>
       </span>
       <span title="bbox 392 1026 2061 1082" class="ocr_line">
-        <span lang="grc" title="bbox 392 1028 524 1069" class="ocr_word" id="w_163">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">νεσθαι</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 556 1044 610 1068" class="ocr_word" id="w_164">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τῷ</ins>
@@ -1315,9 +1302,14 @@
             <ins title="nlp 1.00" class="alt">καθ’</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1482 1521 1576 1546" class="ocr_word" id="w_253">
+        <span id="w_253_0" class="ocr_word" title="bbox 1482 1521 1576 1546">
           <span class="alternatives">
-            <ins title="nlp 2.00">αύτὸ</ins>
+            <ins class="alt" title="nlp 2.00">αὑτὸ</ins>
+          </span>
+        </span>
+        <span id="w_253_1" class="ocr_word" title="bbox 1482 1521 1576 1546">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1608 1507 1734 1545" class="ocr_word" id="w_254">
@@ -1333,11 +1325,6 @@
         <span lang="grc" title="bbox 1863 1519 1991 1544" class="ocr_word" id="w_256">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">οὐκέτι</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 2020 1519 2062 1543" class="ocr_word" id="w_257">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1632,14 +1619,24 @@
             <ins title="nlp 1.00" class="alt">ἀπλοῦν</ins>
           </span>
         </span>
-        <span title="bbox 569 1922 641 1976" class="ocr_word" id="w_314">
+        <span id="w_314_0" class="ocr_word" title="bbox 569 1922 641 1976">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; τῷ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῷ</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 668 1921 799 1976" class="ocr_word" id="w_315">
+        <span id="w_314_1" class="ocr_word" title="bbox 569 1922 641 1976">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατὰ</ins>
+            <ins class="alt" title="nlp 2.00">ἁπλῷ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_315_0" class="ocr_word" title="bbox 668 1921 799 1976">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_315_1" class="ocr_word" title="bbox 668 1921 799 1976">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 979 1937 1041 1960" class="ocr_word" id="w_318">
@@ -1776,14 +1773,9 @@
             <ins title="nlp 1.00" class="alt">δὲ</ins>
           </span>
         </span>
-        <span title="bbox 1064 2057 1072 2072" class="ocr_word" id="w_344">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_345_0" class="ocr_word" title="bbox 1086 2058 1231 2110">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀγαθὸν</ins>
+            <ins class="alt" title="nlp 2.00">῾ἀγαθὸν</ins>
           </span>
         </span>
         <span id="w_345_1" class="ocr_word" title="bbox 1086 2058 1231 2110">
@@ -1806,14 +1798,9 @@
             <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span title="bbox 1957 2053 1965 2068" class="ocr_word" id="w_348">
+        <span id="w_348_0" class="ocr_word" title="bbox 1957 2053 1965 2068">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1979 2054 2067 2107" class="ocr_word" id="w_349">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾ ἀγαθὸν ’</ins>
+            <ins class="alt" title="nlp 2.00">῾</ins>
           </span>
         </span>
       </span>
@@ -1823,14 +1810,9 @@
             <ins title="nlp 1.00" class="alt">ἄρα</ins>
           </span>
         </span>
-        <span title="bbox 623 2129 630 2143" class="ocr_word" id="w_352">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 645 2145 713 2169" class="ocr_word" id="w_353">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">οὐκ</ins>
+            <ins title="nlp 2.00" class="alt">῾οὐκ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 735 2125 902 2181" class="ocr_word" id="w_354">
@@ -2230,14 +2212,14 @@
             <ins title="nlp 1.00" class="alt">ἐνδιαθέτου</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1832 2536 1946 2586" class="ocr_word" id="w_431">
+        <span id="w_431_0" class="ocr_word" title="bbox 1832 2536 1946 2586">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">λόγου</ins>
+            <ins class="alt" title="nlp 2.00">λόγου</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1977 2548 2066 2586" class="ocr_word" id="w_432">
+        <span id="w_431_1" class="ocr_word" title="bbox 1832 2536 1946 2586">
           <span class="alternatives">
-            <ins title="nlp 2.00">γυμτὸ</ins>
+            <ins class="alt" title="nlp 2.00">γυμτὸ</ins>
           </span>
         </span>
       </span>
@@ -2260,14 +2242,12 @@
         </span>
         <span title="bbox 687 2743 845 2776" class="ocr_word" id="w_437">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">lacimam</ins>
-            <del title="nlp 0.90">lacimam</del>
+            <ins title="nlp 2.00">lacunam</ins>
           </span>
         </span>
         <span title="bbox 865 2743 1036 2784" class="ocr_word" id="w_438">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">iudicavi;</ins>
-            <del title="nlp 0.90">iudicavi;</del>
+            <ins title="nlp 2.00">indicavi;</ins>
           </span>
         </span>
         <span title="bbox 1062 2743 1257 2776" class="ocr_word" id="w_439">
@@ -2392,8 +2372,7 @@
         </span>
         <span title="bbox 1998 2796 2132 2840" class="ocr_word" id="w_461">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’Jjtj</ins>
-            <del title="nlp 0.90">’Jjtj</del>
+            <ins title="nlp 2.00">λεγούσῃ</ins>
           </span>
         </span>
       </span>
@@ -2430,14 +2409,14 @@
             <ins title="nlp 1.00" class="alt">13</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1070 2858 1287 2904" class="ocr_word" id="w_468">
+        <span id="w_468_0" class="ocr_word" title="bbox 1070 2858 1287 2904">
           <span class="alternatives">
-            <ins title="nlp 2.00">θαίνεσθαι —</ins>
+            <ins class="alt" title="nlp 2.00">φαίνεσθαι—λευκῷ]</ins>
           </span>
         </span>
-        <span title="bbox 1291 2857 1417 2901" class="ocr_word" id="w_469">
+        <span id="w_468_1" class="ocr_word" title="bbox 1070 2858 1287 2904">
           <span class="alternatives">
-            <ins title="nlp 2.00">λευκῷ]</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span title="bbox 1444 2868 1497 2890" class="ocr_word" id="w_470">
@@ -2460,11 +2439,6 @@
         <span lang="grc" title="bbox 1893 2868 1940 2888" class="ocr_word" id="w_473">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τῷ</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1965 2854 2073 2888" class="ocr_word" id="w_474">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λευκῷ</ins>
           </span>
         </span>
       </span>
@@ -2501,9 +2475,14 @@
             <del title="nlp 0.90">fol.</del>
           </span>
         </span>
-        <span title="bbox 1027 2917 1118 2951" class="ocr_word" id="w_481">
+        <span id="w_481_0" class="ocr_word" title="bbox 1027 2917 1118 2951">
           <span class="alternatives">
-            <ins title="nlp 2.00">208ν</ins>
+            <ins class="alt" title="nlp 2.00">208v</ins>
+          </span>
+        </span>
+        <span id="w_481_1" class="ocr_word" title="bbox 1027 2917 1118 2951">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span title="bbox 1144 2918 1208 2951" class="ocr_word" id="w_482">
@@ -2536,12 +2515,6 @@
         <span lang="grc" title="bbox 1947 2925 1967 2958" class="ocr_word" id="w_487">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἡ</ins>
-          </span>
-        </span>
-        <span title="bbox 1994 2912 2131 2956" class="ocr_word" id="w_488">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">scripsi:</ins>
-            <del title="nlp 0.90">scripsi:</del>
           </span>
         </span>
       </span>
@@ -2652,8 +2625,7 @@
         </span>
         <span title="bbox 516 3045 634 3067" class="ocr_word" id="w_508">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">rasiira</ins>
-            <del title="nlp 0.90">rasiira</del>
+            <ins title="nlp 2.00">rasura</ins>
           </span>
         </span>
         <span title="bbox 660 3035 684 3067" class="ocr_word" id="w_509">
@@ -2694,8 +2666,7 @@
         </span>
         <span title="bbox 1634 3032 1794 3064" class="ocr_word" id="w_516">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">Ainmon.</ins>
-            <del title="nlp 0.90">Ainmon.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span title="bbox 1820 3030 1879 3063" class="ocr_word" id="w_517">
@@ -2704,9 +2675,9 @@
             <del title="nlp 0.90">fol.</del>
           </span>
         </span>
-        <span title="bbox 1898 3029 1989 3063" class="ocr_word" id="w_518">
+        <span id="w_518_0" class="ocr_word" title="bbox 1898 3029 1989 3063">
           <span class="alternatives">
-            <ins title="nlp 2.00">210ν</ins>
+            <ins class="alt" title="nlp 2.00">210v</ins>
           </span>
         </span>
       </span>
