--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0585.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0585.html
@@ -346,24 +346,29 @@
             <ins class="alt" title="nlp 1.00">νῦν</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 213 1229 379 1274" lang="grc">
+        <span id="w_56_0" class="ocr_word" title="bbox 213 1229 379 1274">
           <span class="alternatives">
-            <ins title="nlp 2.00">(σημαίνει</ins>
+            <ins class="alt" title="nlp 2.00">(σημαίνει</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 481 1232 651 1274" lang="grc">
+        <span id="w_56_1" class="ocr_word" title="bbox 213 1229 379 1274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκαριαῖον</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_57_0" class="ocr_word" title="bbox 481 1232 651 1274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 481 1232 651 1274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀκαριαῖον</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 671 1229 850 1267" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνεστῶτα)</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 874 1227 998 1270">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">169,20</ins>
           </span>
         </span>
       </span>
