--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0528.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0528.html
@@ -1825,9 +1825,9 @@
             <ins title="nlp 2.00">(ante</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 2079 2941 2203 2984">
+        <span id="w_342_0" class="ocr_word" title="bbox 2079 2941 2203 2984">
           <span class="alternatives">
-            <ins title="nlp 2.00">δεξιοῦ</ins>
+            <ins class="alt" title="nlp 2.00">δεξιοῦ)</ins>
           </span>
         </span>
       </span>
@@ -2053,7 +2053,7 @@
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1968 3118 2010 3150" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">22 τῆς διαφορᾶς</ins>
+            <ins title="nlp 2.00">τῆς διαφορᾶς</ins>
           </span>
         </span>
       </span>
