--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0586.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0586.html
@@ -407,9 +407,14 @@
             <ins class="alt" title="nlp 1.00">πρακτικός.</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 593 1284 631 1305" lang="grc">
+        <span id="w_67_0" class="ocr_word" title="bbox 593 1284 631 1305">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρακτικόν</ins>
+            <ins class="alt" title="nlp 2.00">τό</ins>
+          </span>
+        </span>
+        <span id="w_67_1" class="ocr_word" title="bbox 593 1284 631 1305">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πρακτικόν</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 860 1269 914 1311">
@@ -1124,16 +1129,11 @@
             <ins class="alt" title="nlp 1.00">71,11</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 2014 374 2130 420" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥυθμί-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1322 435 1591 476">
         <span id="w_192" class="ocr_word" title="bbox 1322 435 1435 476" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ζεσθαι</ins>
+            <ins title="nlp 2.00">ῥυθμίζεσθαι</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1464 435 1591 476">
@@ -1150,14 +1150,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1238 730 1547 778">
-        <span id="w_195_0" class="ocr_word" title="bbox 1238 732 1416 778">
+        <span id="w_195_0_0" class="ocr_word" title="bbox 1238 732 1416 778">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">*Σαοφία</ins>
           </span>
         </span>
-        <span id="w_195_1" class="ocr_word" title="bbox 1238 732 1416 778">
+        <span id="w_195_0_1" class="ocr_word" title="bbox 1238 732 1416 778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">46,15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1895,8 +1895,7 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1594 2745 1671 2778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">syu.</ins>
-            <del title="nlp 0.90">syu.</del>
+            <ins title="nlp 2.00">syn.</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1705 2742 1905 2776" lang="grc">
