--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0617.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0617.html
@@ -313,17 +313,7 @@
       <span class="ocr_line" title="bbox 152 616 1345 672">
         <span id="w_58" class="ocr_word" title="bbox 152 630 170 660">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 709 616 904 672" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
-          </span>
-        </span>
-        <span id="w_60" class="ocr_word" title="bbox 1050 617 1161 672" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ε&amp;#x772;&amp;#x003E;.</ins>
+            <ins title="nlp 2.00">5 &amp;#x003C;ρᾶξις ε&amp;#x772;&amp;x003E;. Περὶ λόγου.</ins>
           </span>
         </span>
       </span>
@@ -344,9 +334,14 @@
             <ins class="alt" title="nlp 2.00">Λόγος</ins>
           </span>
         </span>
-        <span id="w_63_1" class="ocr_word" title="bbox 443 753 591 793">
+        <span id="w_63_1_0" class="ocr_word" title="bbox 443 753 591 793">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐστι</ins>
+            <ins class="alt" title="nlp 2.00">ἐστὶ</ins>
+          </span>
+        </span>
+        <span id="w_63_1_1" class="ocr_word" title="bbox 443 753 591 793">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 750 769 882 808" lang="grc">
@@ -372,11 +367,6 @@
         <span id="w_68_0" class="ocr_word" title="bbox 1686 773 1734 810">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἧς</ins>
-          </span>
-        </span>
-        <span id="w_68_1" class="ocr_word" title="bbox 1686 773 1734 810">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -663,9 +653,14 @@
             <ins class="alt" title="nlp 1.00">ἑξῆς</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 704 1266 808 1321" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 704 1266 808 1321">
           <span class="alternatives">
-            <ins title="nlp 2.00">[μἐν]</ins>
+            <ins class="alt" title="nlp 2.00">[μὲν]</ins>
+          </span>
+        </span>
+        <span id="w_124_1" class="ocr_word" title="bbox 704 1266 808 1321">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 842 1283 1028 1321" lang="grc">
@@ -696,11 +691,6 @@
         <span id="w_130" class="ocr_word" title="bbox 1643 1282 1705 1306" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_131" class="ocr_word" title="bbox 1745 1269 1855 1319" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγον</ins>
           </span>
         </span>
       </span>
@@ -752,9 +742,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 134 1403 1857 1459">
-        <span id="w_141" class="ocr_word" title="bbox 134 1419 170 1449" lang="grc">
+        <span id="w_141_0" class="ocr_word" title="bbox 134 1419 170 1449">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἧς</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 134 1419 170 1449">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἧς</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 294 1420 382 1445" lang="grc">
@@ -1295,14 +1290,9 @@
             <ins class="alt" title="nlp 1.00">οἷον</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1620 2015 1627 2030">
-          <span class="alternatives">
-            <ins title="nlp 2.00">'</ins>
-          </span>
-        </span>
         <span id="w_245" class="ocr_word" title="bbox 1647 2016 1856 2070" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Σωκράτης</ins>
+            <ins class="alt" title="nlp 2.00">'Σωκράτης</ins>
           </span>
         </span>
       </span>
@@ -1337,14 +1327,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 1087 2084 1095 2099" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">᾿ </ins>
-          </span>
-        </span>
         <span id="w_255" class="ocr_word" title="bbox 1114 2101 1145 2124" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
+            <ins class="alt" title="nlp 2.00">᾿ εἰ</ins>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1178 2085 1284 2138" lang="grc">
@@ -1372,9 +1357,9 @@
             <ins title="nlp 2.00">ἡμέρα</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1846 2117 1855 2135">
+        <span id="w_261_0" class="ocr_word" title="bbox 1846 2117 1855 2135">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐστίν’</ins>
+            <ins class="alt" title="nlp 2.00">ἐστίν᾿,</ins>
           </span>
         </span>
       </span>
@@ -1498,9 +1483,14 @@
             <ins class="alt" title="nlp 1.00">ἐξηγούμενος</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 619 2291 717 2345" lang="grc">
+        <span id="w_285_0" class="ocr_word" title="bbox 619 2291 717 2345">
           <span class="alternatives">
-            <ins title="nlp 2.00">[καὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ]</ins>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 619 2291 717 2345">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 750 2293 949 2345" lang="grc">
@@ -1526,11 +1516,6 @@
         <span id="w_290" class="ocr_word" title="bbox 1598 2303 1720 2332" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὕτως</ins>
-          </span>
-        </span>
-        <span id="w_291" class="ocr_word" title="bbox 1750 2304 1858 2342" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φερόμενον·</ins>
           </span>
         </span>
       </span>
@@ -1575,14 +1560,14 @@
             <ins class="alt" title="nlp 1.00">δυνάμεως</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 1562 2355 1690 2410" lang="grc">
+        <span id="w_301_0" class="ocr_word" title="bbox 1562 2355 1690 2410">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;φύσει</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;φύσει</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1723 2370 1857 2410" lang="grc">
+        <span id="w_301_1" class="ocr_word" title="bbox 1562 2355 1690 2410">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔσης·</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1818,9 +1803,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_348" class="ocr_word" title="bbox 1573 2628 1857 2682" lang="grc">
+        <span id="w_348_0" class="ocr_word" title="bbox 1573 2628 1857 2682">
           <span class="alternatives">
-            <ins title="nlp 2.00">αντιλπριῆςλ. </ins>
+            <ins class="alt" title="nlp 2.00">ἀντιληπτικῆς.</ins>
           </span>
         </span>
       </span>
@@ -1879,8 +1864,7 @@
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1268 2838 1426 2871">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lacunain</ins>
-            <del title="nlp 0.90">lacunain</del>
+            <ins title="nlp 2.00">lacunam</ins>
           </span>
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1452 2837 1620 2871">
@@ -1946,13 +1930,12 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1444 2895 1484 2927">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P-</ins>
+            <ins title="nlp 2.00">P2</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1606 2895 1624 2927">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">PG</del>
+            <ins title="nlp 2.00">6</ins>
           </span>
         </span>
         <span id="w_373" class="ocr_word" title="bbox 1651 2895 1737 2927" lang="grc">
@@ -1985,14 +1968,9 @@
             <del title="nlp 0.90">v.</del>
           </span>
         </span>
-        <span id="w_378" class="ocr_word" title="bbox 404 2960 454 2992">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">14.</ins>
-          </span>
-        </span>
         <span id="w_379" class="ocr_word" title="bbox 471 2958 598 3002">
           <span class="alternatives">
-            <ins title="nlp 2.00">27sqq.</ins>
+            <ins title="nlp 2.00">14.27sqq.</ins>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 735 2956 754 2989">
@@ -2060,14 +2038,14 @@
             <ins title="nlp 2.00">σεως</ins>
           </span>
         </span>
-        <span id="w_392" class="ocr_word" title="bbox 239 3019 361 3062">
+        <span id="w_392_0" class="ocr_word" title="bbox 239 3019 361 3062">
           <span class="alternatives">
-            <ins title="nlp 2.00">scri!</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
-        <span id="w_393" class="ocr_word" title="bbox 371 3031 377 3050">
+        <span id="w_392_1" class="ocr_word" title="bbox 239 3019 361 3062">
           <span class="alternatives">
-            <ins title="nlp 2.00">P</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 405 3017 600 3061" lang="grc">
@@ -2126,11 +2104,6 @@
         <span id="w_404" class="ocr_word" title="bbox 1730 3022 1765 3042" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὃν</ins>
-          </span>
-        </span>
-        <span id="w_405" class="ocr_word" title="bbox 1791 3010 1928 3054">
-          <span class="alternatives">
-            <ins title="nlp 2.00">scripsi :</ins>
           </span>
         </span>
       </span>
@@ -2271,12 +2244,6 @@
         <span id="w_430" class="ocr_word" title="bbox 1240 3127 1284 3160">
           <span class="alternatives">
             <ins title="nlp 2.00">50v</ins>
-          </span>
-        </span>
-        <span id="w_431" class="ocr_word" title="bbox 1294 3137 1307 3153">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">v</ins>
-            <del title="nlp 0.90">v</del>
           </span>
         </span>
       </span>
