--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0667.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0667.html
@@ -34,8 +34,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 793 159 1216 195">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTKUPHI-yPATIONE</ins>
-            <del title="nlp 0.90">INTKUPHI-yPATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1243 162 1363 203">
@@ -360,12 +359,7 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 707 557 806 584" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
-          </span>
-        </span>
-        <span id="w_68" class="ocr_word" title="bbox 820 543 828 558">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν’</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 867 545 929 584" lang="grc">
@@ -373,14 +367,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_70" class="ocr_word" title="bbox 953 543 961 557" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_71" class="ocr_word" title="bbox 975 561 1015 585" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">῾τὸ</ins>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1047 547 1183 586" lang="grc">
@@ -395,17 +384,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1361 561 1459 588" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
-          </span>
-        </span>
-        <span id="w_75" class="ocr_word" title="bbox 1473 546 1481 561">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_76" class="ocr_word" title="bbox 1496 580 1503 587">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν’.</ins>
           </span>
         </span>
       </span>
@@ -544,9 +523,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 570 746 630 801">
+        <span id="w_104_0" class="ocr_word" title="bbox 570 746 630 801">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἡ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 570 746 630 801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 668 748 856 802" lang="grc">
@@ -587,11 +571,6 @@
         <span id="w_112" class="ocr_word" title="bbox 1574 750 1635 789" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
-          </span>
-        </span>
-        <span id="w_113" class="ocr_word" title="bbox 1665 750 1815 788" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντων</ins>
           </span>
         </span>
       </span>
@@ -715,16 +694,11 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1707 899 1818 923" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατά-</ins>
+            <ins title="nlp 2.00">κατάφασιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 158 950 1817 1007">
-        <span id="w_138" class="ocr_word" title="bbox 158 967 270 1007" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φασιν</ins>
-          </span>
-        </span>
         <span id="w_139" class="ocr_word" title="bbox 301 952 443 1005" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἰστέον</ins>
@@ -819,12 +793,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 772 1036 935 1061" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνάντιον</ins>
-          </span>
-        </span>
-        <span id="w_159" class="ocr_word" title="bbox 950 1054 958 1067">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐνάντιον,</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 995 1037 1061 1075" lang="grc">
@@ -902,11 +871,6 @@
         <span id="w_174" class="ocr_word" title="bbox 1355 1105 1433 1130" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἷον</ins>
-          </span>
-        </span>
-        <span id="w_175" class="ocr_word" title="bbox 1458 1088 1465 1102">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1479 1089 1682 1143" lang="grc">
@@ -1355,9 +1319,14 @@
             <ins class="alt" title="nlp 1.00">μάχεται</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 840 1635 937 1690">
+        <span id="w_264_0" class="ocr_word" title="bbox 840 1635 937 1690">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; καὶ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 840 1635 937 1690">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 976 1651 1101 1675" lang="grc">
@@ -1375,18 +1344,8 @@
             <ins class="alt" title="nlp 1.00">ἄλλην</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1560 1632 1819 1676" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντεξετάσον-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 159 1701 1819 1760">
-        <span id="w_269" class="ocr_word" title="bbox 159 1719 231 1744" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τες.</ins>
-          </span>
-        </span>
         <span id="w_270" class="ocr_word" title="bbox 300 1718 430 1759" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
@@ -1745,16 +1704,11 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1711 2056 1819 2094" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετα-</ins>
+            <ins title="nlp 2.00">μεταθέσεως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 2111 1816 2170">
-        <span id="w_341" class="ocr_word" title="bbox 157 2116 306 2160" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θέσεως</ins>
-          </span>
-        </span>
         <span id="w_342" class="ocr_word" title="bbox 337 2114 452 2157" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὖσαν</ins>
@@ -1797,16 +1751,11 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 1703 2123 1816 2162" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐχρή-</ins>
+            <ins title="nlp 2.00">ἐχρήσατο.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 159 2177 1814 2238">
-        <span id="w_351" class="ocr_word" title="bbox 159 2197 263 2224" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σατο.</ins>
-          </span>
-        </span>
         <span id="w_352" class="ocr_word" title="bbox 309 2181 335 2238" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ᾗ</ins>
@@ -2209,8 +2158,7 @@
         </span>
         <span id="w_429" class="ocr_word" title="bbox 848 2775 932 2808">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">elicit</ins>
-            <del title="nlp 0.90">elicit</del>
+            <ins title="nlp 2.00">dicit</ins>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 956 2774 1116 2808">
@@ -2227,13 +2175,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1217 2770 1279 2803">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">211</ins>
-          </span>
-        </span>
-        <span id="w_433" class="ocr_word" title="bbox 1293 2779 1308 2795">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">v</ins>
-            <del title="nlp 0.90">v</del>
+            <ins class="alt" title="nlp 2.00">211v</ins>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1436 2768 1456 2798">
@@ -2330,16 +2272,11 @@
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1739 2843 1890 2877" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γραμμα-</ins>
+            <ins title="nlp 2.00">γραμματικὴ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 87 2889 1890 2950">
-        <span id="w_452" class="ocr_word" title="bbox 87 2918 164 2950" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τικὴ</ins>
-          </span>
-        </span>
         <span id="w_453" class="ocr_word" title="bbox 190 2904 373 2948">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">utrobique</ins>
@@ -2515,14 +2452,9 @@
             <ins class="alt" title="nlp 1.00">22</ins>
           </span>
         </span>
-        <span id="w_485" class="ocr_word" title="bbox 1315 3023 1401 3055" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔχεις</ins>
-          </span>
-        </span>
         <span id="w_486" class="ocr_word" title="bbox 1412 3029 1452 3033" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">—ζητεῖς</ins>
+            <ins title="nlp 2.00">ἔχεις—ζητεῖς</ins>
           </span>
         </span>
         <span id="w_487" class="ocr_word" title="bbox 1601 3008 1741 3050">
@@ -2767,8 +2699,7 @@
       <span class="ocr_line" title="bbox 158 3250 1627 3295">
         <span id="w_529" class="ocr_word" title="bbox 158 3268 313 3293">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Coraiuent.</ins>
-            <del title="nlp 0.90">Coraiuent.</del>
+            <ins title="nlp 2.00">Comment.</ins>
           </span>
         </span>
         <span id="w_530" class="ocr_word" title="bbox 333 3267 419 3291">
@@ -2790,8 +2721,7 @@
         </span>
         <span id="w_533" class="ocr_word" title="bbox 592 3265 687 3295">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stejili.</ins>
-            <del title="nlp 0.90">Stejili.</del>
+            <ins title="nlp 2.00">Steph.</ins>
           </span>
         </span>
         <span id="w_534" class="ocr_word" title="bbox 709 3264 742 3287">
@@ -2801,8 +2731,7 @@
         </span>
         <span id="w_535" class="ocr_word" title="bbox 762 3263 882 3292">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Iiiterpr.</ins>
-            <del title="nlp 0.90">Iiiterpr.</del>
+            <ins title="nlp 2.00">Interpr.</ins>
           </span>
         </span>
         <span id="w_536" class="ocr_word" title="bbox 1601 3250 1627 3280">
