--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0529.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0529.html
@@ -589,9 +589,9 @@
             <ins class="alt" title="nlp 1.00">ὁποῖον</ins>
           </span>
         </span>
-        <span id="w_114" class="ocr_word" title="bbox 1848 693 1929 728">
+        <span id="w_114_0" class="ocr_word" title="bbox 1848 693 1929 728">
           <span class="alternatives">
-            <ins title="nlp 2.00">198ν</ins>
+            <ins class="alt" title="nlp 2.00">198v</ins>
           </span>
         </span>
       </span>
@@ -985,9 +985,14 @@
             <ins class="alt" title="nlp 1.00">πρώτου</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1327 1235 1575 1292" lang="grc">
+        <span id="w_191_0" class="ocr_word" title="bbox 1327 1235 1575 1292">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὑπόδειγμα&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὑπόδειγμα&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_191_1" class="ocr_word" title="bbox 1327 1235 1575 1292">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1609 1253 1650 1276" lang="grc">
@@ -998,11 +1003,6 @@
         <span id="w_193" class="ocr_word" title="bbox 1673 1239 1806 1278" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λευκὸν</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1828 1255 1870 1279" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1540,7 +1540,7 @@
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1004 1857 1146 1911" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1178 1872 1248 1910" lang="grc">
@@ -1893,9 +1893,9 @@
             <ins class="alt" title="nlp 1.00">οὔτε</ins>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 1770 2204 1876 2243" lang="grc">
+        <span id="w_368_0" class="ocr_word" title="bbox 1770 2204 1876 2243">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐλάττους.</ins>
+            <ins class="alt" title="nlp 2.00">ἀλάττους.</ins>
           </span>
         </span>
       </span>
@@ -2245,9 +2245,14 @@
             <ins title="nlp 2.00">πρωτερεύει</ins>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 401 2707 447 2741">
+        <span id="w_437_0" class="ocr_word" title="bbox 401 2707 447 2741">
           <span class="alternatives">
-            <ins title="nlp 2.00">V</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
+          </span>
+        </span>
+        <span id="w_437_1" class="ocr_word" title="bbox 401 2707 447 2741">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 615 2707 717 2751" lang="grc">
@@ -2298,11 +2303,6 @@
         <span id="w_447" class="ocr_word" title="bbox 1771 2702 1791 2736">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">3</ins>
-          </span>
-        </span>
-        <span id="w_448" class="ocr_word" title="bbox 1817 2713 1950 2747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένηται</ins>
           </span>
         </span>
       </span>
@@ -2873,30 +2873,29 @@
             <ins title="nlp 2.00">τῆ</ins>
           </span>
         </span>
-        <span id="w_554" class="ocr_word" title="bbox 474 3173 532 3218">
+        <span id="w_554_0" class="ocr_word" title="bbox 474 3173 532 3218">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πῆ</ins>
+            <ins class="alt" title="nlp 2.00">(πῆ</ins>
           </span>
         </span>
-        <span id="w_555" class="ocr_word" title="bbox 561 3173 635 3216">
+        <span id="w_554_1" class="ocr_word" title="bbox 474 3173 532 3218">
           <span class="alternatives">
-            <ins title="nlp 2.00">m.2</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_555_0" class="ocr_word" title="bbox 561 3173 635 3216">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">m.2)</ins>
+          </span>
+        </span>
+        <span id="w_555_1" class="ocr_word" title="bbox 561 3173 635 3216">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_556" class="ocr_word" title="bbox 663 3185 756 3207">
           <span class="alternatives">
             <ins title="nlp 2.00">οὐσία</ins>
-          </span>
-        </span>
-        <span id="w_557" class="ocr_word" title="bbox 784 3173 811 3205">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
-        <span id="w_558" class="ocr_word" title="bbox 1004 3171 1047 3206" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">34 εἷεν] εἰσί V</ins>
           </span>
         </span>
       </span>
