--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0587.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0587.html
@@ -181,14 +181,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 90 691 550 737">
-        <span id="w_31_0" class="ocr_word" title="bbox 90 691 420 737">
+        <span id="w_31_0_0" class="ocr_word" title="bbox 90 691 420 737">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">*σφυγμολογεῖν</ins>
           </span>
         </span>
-        <span id="w_31_1" class="ocr_word" title="bbox 90 691 420 737">
+        <span id="w_31_0_1" class="ocr_word" title="bbox 90 691 420 737">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">45,23</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -668,9 +668,9 @@
             <ins class="alt" title="nlp 1.00">43,30</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 785 2102 987 2147" lang="grc">
+        <span id="w_118_0" class="ocr_word" title="bbox 785 2102 987 2147">
           <span class="alternatives">
-            <ins title="nlp 2.00">βάναυσοι—ἄλογοι</ins>
+            <ins class="alt" title="nlp 2.00">βάναυσοι—</ins>
           </span>
         </span>
       </span>
@@ -1624,16 +1624,21 @@
             <ins class="alt" title="nlp 1.00">17,31</ins>
           </span>
         </span>
-        <span id="w_287" class="ocr_word" title="bbox 1672 1577 1937 1612" lang="grc">
+        <span id="w_287_0" class="ocr_word" title="bbox 1672 1577 1937 1612">
           <span class="alternatives">
-            <ins title="nlp 2.00">πόρρω—προσεχές</ins>
+            <ins class="alt" title="nlp 2.00">πόρρω—</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1128 1625 1330 1670">
-        <span id="w_289" class="ocr_word" title="bbox 1228 1625 1330 1663">
+        <span id="w_289_0" class="ocr_word" title="bbox 1228 1625 1330 1663">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">21,26</ins>
+            <ins class="alt" title="nlp 2.00">προσεχές</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 1228 1625 1330 1663">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">21,26</ins>
           </span>
         </span>
       </span>
@@ -1645,7 +1650,7 @@
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1311 1694 1391 1729" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">opp. ἐπένοια 58,2</ins>
+            <ins title="nlp 2.00">ἐπένοια 58,2</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1678 1683 1710 1717" lang="grc">
