--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0588.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0588.html
@@ -82,14 +82,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 342 324 727 371">
-        <span id="w_12_0" class="ocr_word" title="bbox 342 325 574 371">
+        <span id="w_12_0_0" class="ocr_word" title="bbox 342 325 574 371">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">φιγόψογος</ins>
+            <ins class="alt" title="nlp 2.00">φιλόψογος</ins>
           </span>
         </span>
-        <span id="w_12_1" class="ocr_word" title="bbox 342 325 574 371">
+        <span id="w_12_0_1" class="ocr_word" title="bbox 342 325 574 371">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">143,29</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
