--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0530.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0530.html
@@ -388,14 +388,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 642 555 862 610" lang="grc">
+        <span id="w_72_0" class="ocr_word" title="bbox 642 555 862 610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀχώριστον</ins>
+            <ins class="alt" title="nlp 2.00">ἀχύριστον</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 903 553 1162 609" lang="grc">
+        <span id="w_72_1" class="ocr_word" title="bbox 642 555 862 610">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηκὸς</ins>
+            <ins class="alt" title="nlp 2.00">συμ|βεβηκὸς</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1202 554 1297 594" lang="grc">
@@ -470,19 +470,19 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1554 623 1840 677" lang="grc">
+        <span id="w_88_0" class="ocr_word" title="bbox 1554 623 1840 677">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηκότα.</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκότα.</ins>
+          </span>
+        </span>
+        <span id="w_88_1" class="ocr_word" title="bbox 1554 623 1840 677">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1902 625 2076 663" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τάττεται</ins>
-          </span>
-        </span>
-        <span id="w_90" class="ocr_word" title="bbox 2098 623 2139 663" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -542,19 +542,19 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 1665 692 1967 746" lang="grc">
+        <span id="w_102_0" class="ocr_word" title="bbox 1665 692 1967 746">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηκότων</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκότων</ins>
+          </span>
+        </span>
+        <span id="w_102_1" class="ocr_word" title="bbox 1665 692 1967 746">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1991 707 2075 746" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχει</ins>
-          </span>
-        </span>
-        <span id="w_104" class="ocr_word" title="bbox 2097 708 2138 732" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -785,9 +785,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1510 967 1759 1021" lang="grc">
+        <span id="w_149_0" class="ocr_word" title="bbox 1510 967 1759 1021">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηκὸς</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκὸς</ins>
+          </span>
+        </span>
+        <span id="w_149_1" class="ocr_word" title="bbox 1510 967 1759 1021">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1791 968 1957 1018" lang="grc">
@@ -800,18 +805,8 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_152" class="ocr_word" title="bbox 2069 968 2140 1008" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κείμενον</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 454 1036 2139 1091">
-        <span id="w_153" class="ocr_word" title="bbox 454 1054 565 1078" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένον</ins>
-          </span>
-        </span>
         <span id="w_154" class="ocr_word" title="bbox 598 1053 702 1091" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡμᾶς</ins>
@@ -976,9 +971,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 2035 1176 2141 1229" lang="grc">
+        <span id="w_186_0" class="ocr_word" title="bbox 2035 1176 2141 1229">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀχώριστον.</ins>
+            <ins class="alt" title="nlp 2.00">ἀχώριστον.</ins>
           </span>
         </span>
       </span>
@@ -1216,7 +1211,7 @@
         </span>
         <span id="w_233" class="ocr_word" title="bbox 1742 1452 1846 1506" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πῶς</ins>
+            <ins title="nlp 2.00">(πῶς</ins>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1883 1452 1952 1507" lang="grc">
@@ -1962,12 +1957,7 @@
         </span>
         <span id="w_379_0" class="ocr_word" title="bbox 1421 2424 1483 2457">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V2</ins>
-          </span>
-        </span>
-        <span id="w_379_1" class="ocr_word" title="bbox 1421 2424 1483 2457">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V2:</ins>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 1517 2424 1574 2457" lang="grc">
@@ -1977,12 +1967,7 @@
         </span>
         <span id="w_381_0" class="ocr_word" title="bbox 1603 2423 1663 2457">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V1</ins>
-          </span>
-        </span>
-        <span id="w_381_1" class="ocr_word" title="bbox 1603 2423 1663 2457">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V1:</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1697 2422 1713 2456" lang="grc">
@@ -2129,12 +2114,7 @@
         </span>
         <span id="w_409_0" class="ocr_word" title="bbox 1765 2540 1826 2574">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V2</ins>
-          </span>
-        </span>
-        <span id="w_409_1" class="ocr_word" title="bbox 1765 2540 1826 2574">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V2:</ins>
           </span>
         </span>
         <span id="w_410" class="ocr_word" title="bbox 1854 2552 1915 2585" lang="grc">
@@ -2599,7 +2579,7 @@
         </span>
         <span id="w_496" class="ocr_word" title="bbox 1047 2895 1096 2938" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1124 2894 1216 2928" lang="grc">
@@ -2904,7 +2884,7 @@
         </span>
         <span id="w_555" class="ocr_word" title="bbox 1496 3128 1619 3175" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄχωρ.)</ins>
+            <ins title="nlp 2.00">ἀχώρ.)</ins>
           </span>
         </span>
         <span id="w_556" class="ocr_word" title="bbox 1648 3128 1754 3161">
