--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0589.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0589.html
@@ -21,10 +21,9 @@
             <del title="nlp 0.90">INDEX</del>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1371 906 1411 946">
+        <span id="w_8_0" class="ocr_word" title="bbox 1371 906 1411 946">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">N0i\lINUM</ins>
-            <del title="nlp 0.90">M</del>
+            <ins class="alt" title="nlp 2.00">NOMINUM</ins>
           </span>
         </span>
       </span>
@@ -204,14 +203,14 @@
             <ins class="alt" title="nlp 1.00">ἔφη</ins>
           </span>
         </span>
-        <span id="w_40_0" class="ocr_word" title="bbox 729 1624 998 1673">
+        <span id="w_40_0_0" class="ocr_word" title="bbox 729 1624 998 1673">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(περὶ</ins>
           </span>
         </span>
-        <span id="w_40_1" class="ocr_word" title="bbox 729 1624 998 1673">
+        <span id="w_40_0_1" class="ocr_word" title="bbox 729 1624 998 1673">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Ὁμήρου)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -654,9 +653,9 @@
             <ins title="nlp 2.00">Περὶ</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 947 2459 1004 2479" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 947 2459 1004 2479">
           <span class="alternatives">
-            <ins title="nlp 2.00">τολιτείας</ins>
+            <ins class="alt" title="nlp 2.00">πολιτείας</ins>
           </span>
         </span>
       </span>
@@ -1119,9 +1118,14 @@
             <ins class="alt" title="nlp 1.00">Πλάτωνος</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 1454 1097 1568 1137">
+        <span id="w_214_0" class="ocr_word" title="bbox 1454 1097 1568 1137">
           <span class="alternatives">
-            <ins title="nlp 2.00">114,8·</ins>
+            <ins class="alt" title="nlp 2.00">114,8</ins>
+          </span>
+        </span>
+        <span id="w_214_1" class="ocr_word" title="bbox 1454 1097 1568 1137">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1609 1093 1674 1140" lang="grc">
@@ -1137,11 +1141,6 @@
         <span id="w_217" class="ocr_word" title="bbox 1782 1095 1835 1128" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
-          </span>
-        </span>
-        <span id="w_218" class="ocr_word" title="bbox 1871 1107 1940 1131" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
       </span>
@@ -1778,9 +1777,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1076 2382 1948 2432">
-        <span id="w_341" class="ocr_word" title="bbox 1076 2388 1251 2432" lang="grc">
+        <span id="w_341_0" class="ocr_word" title="bbox 1076 2388 1251 2432">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Δαβίδ).</ins>
+            <ins class="alt" title="nlp 2.00">(Δαβίδ).</ins>
+          </span>
+        </span>
+        <span id="w_341_1" class="ocr_word" title="bbox 1076 2388 1251 2432">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1301 2399 1321 2431" lang="grc">
@@ -1811,11 +1815,6 @@
         <span id="w_347" class="ocr_word" title="bbox 1797 2382 1863 2415" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
-          </span>
-        </span>
-        <span id="w_348" class="ocr_word" title="bbox 1888 2384 1948 2426" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
